--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
       <h4>Here is my assessments for the subject Develop ICT Solution.</h4>
        <ul>
         <li style="display: inline">
-          <a href="/download/18171 Develop ICT Solution Assessment 1.docx" download>Download Assessment One</a>  ||
+          <a href="/download/18171 Develop ICT Solution Assessment 1.pdf" download>Download Assessment One</a>  ||
         </li>
         <li style="display: inline">
           <a href="/download/18171 Develop ICT Solution Assessment 2.docx" download>Download Assessment Two</a>  ||
