--- a/index.html
+++ b/index.html
@@ -81,13 +81,13 @@
           <a href="/download/18171 Develop ICT Solution Assessment 1.pdf" download>Download Assessment One</a>  ||
         </li>
         <li style="display: inline">
-          <a href="/download/18171 Develop ICT Solution Assessment 2.docx" download>Download Assessment Two</a>  ||
+          <a href="/download/18171 Develop ICT Solution Assessment 2.pdf" download>Download Assessment Two</a>  ||
         </li>
         <li style="display: inline">
           <a href="/download/18171 Develop ICT Solution Task 1.pptx" download>Download Security Slide Show</a>   ||
         </li>
         <li style="display: inline">
-          <a href="https://wellsjohn220.github.io/projectwebsite/Demoproject-chart.html" target="_blank">View My Project</a>  
+          <a href="images/HeavenSystem.jpg" target="_blank">View My Project</a>  
         </li>
       </ul>    
       <br>
